Simplified YouTube player embedding

--- a/html/css/taps2beats.css
+++ b/html/css/taps2beats.css
@@ -71,6 +71,29 @@ main {
   overflow: hidden;
 }
 
+div.url {
+  margin-bottom: 8px;
+}
+
+div.url input#url {
+  width: 32em;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border: 1px solid red;
+  border-radius: 4px;
+}
+
+div.url input#load {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border: 1px solid red;
+  border-radius: 4px;
+}
+
 footer {
   grid-area: footer;
   height: auto;
